Switched from ArrayList to CycleNode.